--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -6,7 +6,7 @@
   border-color: var(--color);
   border-radius: var(--e-border-radius-1);
   box-shadow: var(--e-box-shadow-1-no-color) var(--color);
-  padding: var(--e-space-3);
+  padding: var(--e-space-2);
 }
 
 button.e-card {
